--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    namespace "com.example.budgie_finance"
+    namespace "com.open_budgie.budgie_finance"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
