--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   hidden_drawer_menu: ^3.0.1
   flutter_riverpod: ^2.3.6
+  appwrite: ^9.0.0
 
 dev_dependencies:
   flutter_test:
