--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,16 +13,19 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  hidden_drawer_menu: ^3.0.1
   flutter_riverpod: ^2.3.6
   appwrite: ^9.0.0
   fpdart: ^0.6.0
+  pluto_grid: ^7.0.2
+  dropdownfield2: ^1.0.7
+  dropdown_search: ^5.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  change_app_package_name: ^1.1.0
 
 flutter:
   uses-material-design: true
