--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   fpdart: ^0.6.0
   dropdown_search: ^5.0.6
   flutter_dotenv: ^5.0.2
+  dropdown_textfield: ^1.0.8
 
 dev_dependencies:
   flutter_test:
